Page horizontal scroll bug fix

--- a/src/main/resources/static/output.css
+++ b/src/main/resources/static/output.css
@@ -990,6 +990,14 @@ video {
   overflow-y: auto;
 }
 
+.overflow-x-hidden{
+  overflow-x: hidden;
+}
+
+.overflow-y-scroll{
+  overflow-y: scroll;
+}
+
 .rounded{
   border-radius: 0.25rem;
 }
@@ -1137,6 +1145,10 @@ video {
 
 .p-8{
   padding: 2rem;
+}
+
+.p-20{
+  padding: 5rem;
 }
 
 .px-2{
